--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,4 +1,4 @@
-<% provide(:title, 'Contact') %>
+<% provide(:title, 'Contact Us') %>
 <h1>Contact Us</h1>
 <h2>
   Contact Ruby on Rails Tutorial about the sample app at the
